# BadmintonSlots

./: .gitignore  AGENTS.md  config.json  main.py  pyproject.toml  slots.db
.github/workflows/: backup-db.yml  notify-changes.yml  notify-current.yml  notify.yml
docs/superpowers/plans/: 2026-03-28-badminton-slot-notifier.md
src/: api.py  auth.py  constants.py  db.py  dedup.py  diff.py  filters.py  main.py  notify.py  tz.py
src/badminton_notifier.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_db.py  test_dedup.py  test_diff.py  test_filters.py  test_notify.py
