[project]
name = "badminton-notifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.28.1",
    "playwright>=1.58.0",
]

[project.scripts]
badminton-notifier = "src.main:main"

[tool.uv]
package = true

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
